--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Xcode
 build/
+xcshareddata/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -20,6 +21,7 @@ profile
 DerivedData
 *.hmap
 *.ipa
+*.xccheckout
 
 # CocoaPods
 Pods
